ilk sign in denememiz canlarım

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Hello
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -11,6 +11,9 @@
     <ion-toolbar>
       <ion-title size="large">Blank</ion-title>
     </ion-toolbar>
+    <ion-text color="primary">
+      <h1>Sign in</h1>
+    </ion-text>
   </ion-header>
 
   <div id="container">
