--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -13,6 +13,7 @@
     </ion-toolbar>
     <ion-text color="primary">
       <h1>Sign in</h1>
+      <h2>Welcome</h2>
     </ion-text>
   </ion-header>
 
