--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -18,7 +18,32 @@
   </ion-header>
 
   <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <strong>Welcome to Smart Trip Application</strong>
+    <ion-list>
+      <ion-item>
+        <ion-label>Text input</ion-label>
+        <ion-input placeholder="Enter text"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label>Number input</ion-label>
+        <ion-input type="number" placeholder="000"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label>Password input</ion-label>
+        <ion-input type="password" value="password"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label>Email input</ion-label>
+        <ion-input type="email" placeholder="email@domain.com"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label>Telephone input</ion-label>
+        <ion-input type="tel" placeholder="888-888-8888"></ion-input>
+      </ion-item>
+    </ion-list>
   </div>
 </ion-content>
